Simultaneous playback of Reddit videos in Firefox causes unresponsiveness
Categories
(Core :: Graphics, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox113 | --- | unaffected |
| firefox114 | --- | verified |
| firefox115 | --- | verified |
People
(Reporter: sbadau, Assigned: sotaro)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
34.73 KB,
text/plain
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
Found in
- Nightly 115.0a1
Affected versions
- Nightly 115.0a1
- Firefox 114 beta 5
Tested platforms
- Affected platforms: Windows 10
Steps to reproduce
- Open a new tab and play this Reddit video
- Open another tab and start playing the Reddit video simultaneously.
Expected result
- Both videos should play properly at the same time.
Actual result
- When playing the two videos simultaneously, Firefox becomes unresponsive.
Regression range
Found commit message:
Bug 1831329 - Block FEATURE_HW_DECODED_VIDEO_ZERO_COPY with Driver Version: 20.19.15.4390 r=gfx-reviewers,ErichDonGubler
Additional notes
- This is a follow-up for Bug 1831329.
| Reporter | ||
Updated•3 years ago
|
Comment 1•3 years ago
|
||
:sotaro, since you are the author of the regressor, bug 1831329, could you take a look?
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 2•3 years ago
•
|
||
Hi Simona, thank you for reporting the bug! Can you check if either of the following pref changes could address the problem? Each pref change needs to restart Firefox.
- [1] gfx.direct3d11.reuse-decoder-device = false
- [2] media.hardware-video-decoding.enabled = false
- [3] gfx.webrender.dcomp-video-overlay-win = false
| Reporter | ||
Comment 3•3 years ago
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #2)
Hi Simona, thank you for reporting the bug! Can you check if either of the following pref changes could address the problem? Each pref change needs to restart Firefox.
- [1] gfx.direct3d11.reuse-decoder-device = false
With this pref set to false, the videos play properly and Firefox is not unresponsive.
- [2] media.hardware-video-decoding.enabled = false
This also helps, multiple videos can be played simultaneously and there is no unresponsiveness.
- [3] gfx.webrender.dcomp-video-overlay-win = false
Setting this to false does not help, Firefox becomes unresponsive when 2 videos are played simultaneously.
| Assignee | ||
Comment 4•3 years ago
|
||
Great! Thank you for checking. It seems better to block FEATURE_REUSE_DECODER_DEVICE as in Bug 1831329 comment 6.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 5•3 years ago
|
||
Updated•3 years ago
|
| Assignee | ||
Comment 6•3 years ago
|
||
Hi Simona, can you check if the following build of D178607 blocks FEATURE_REUSE_DECODER_DEVICE in about:support and addresses the problem for you?
https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/P7x1mMWQQ8SoDoI7if9lzw/runs/0/artifacts/public%2Fbuild%2Ftarget.zip
https://treeherder.mozilla.org/jobs?repo=try&selectedTaskRun=P7x1mMWQQ8SoDoI7if9lzw.0&revision=31a5c1825302a3234d12fc73d08c6e40126f3852
| Reporter | ||
Comment 7•3 years ago
•
|
||
(In reply to Sotaro Ikeda [:sotaro] from comment #6)
Hi Simona, can you check if the following build of D178607 blocks FEATURE_REUSE_DECODER_DEVICE in about:support and addresses the problem for you?
https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/P7x1mMWQQ8SoDoI7if9lzw/runs/0/artifacts/public%2Fbuild%2Ftarget.zip
https://treeherder.mozilla.org/jobs?repo=try&selectedTaskRun=P7x1mMWQQ8SoDoI7if9lzw.0&revision=31a5c1825302a3234d12fc73d08c6e40126f3852
Yes, on this build - the FEATURE_REUSE_DECODER_DEVICE is blocked in about:support, and there is no unresponsiveness when playing multiple Reddit videos.
| Assignee | ||
Comment 8•3 years ago
|
||
Great! Thank you.
Comment 10•3 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 11•3 years ago
|
||
Comment on attachment 9335154 [details]
Bug 1833809 - Block FEATURE_REUSE_DECODER_DEVICE with Intel Skylake
Beta/Release Uplift Approval Request
- User impact if declined: Simultaneous playback of Reddit videos with Intel HD Graphics 530 of Driver Version: 20.19.15.4390 causes Firefox unresponsive.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The change just adds blocklist of FEATURE_REUSE_DECODER_DEVICE.
- String changes made/needed: none
- Is Android affected?: No
Comment 12•3 years ago
|
||
Comment on attachment 9335154 [details]
Bug 1833809 - Block FEATURE_REUSE_DECODER_DEVICE with Intel Skylake
Approved for 114 beta 9, thanks.
Comment 13•3 years ago
|
||
| bugherder uplift | ||
Updated•3 years ago
|
Updated•3 years ago
|
| Reporter | ||
Comment 14•3 years ago
|
||
Verified as fixed on the latest Nightly 115.0a1 and Firefox 114.0b9 - tested on a Windows 10 machine with Intel HD Graphics 530 of Driver Version: 20.19.15.4390.
Description
•